--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@angular/core": "4.1.3",
         "@angular/forms": "4.1.3",
         "@angular/http": "4.1.3",
+        "@angular/router": "^4.2.4",
         "@angular/platform-browser": "4.1.3",
         "@angular/platform-browser-dynamic": "4.1.3",
         "@ionic-native/core": "3.12.1",
@@ -25,18 +26,27 @@
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "2.0.1",
         "angularfire2": "^4.0.0-rc.2",
+        "cordova-android": "^6.2.3",
         "cordova-plugin-browsertab": "^0.2.0",
         "cordova-plugin-buildinfo": "^1.1.0",
+        "cordova-plugin-compat": "^1.0.0",
+        "cordova-plugin-console": "^1.0.5",
+        "cordova-plugin-device": "^1.1.4",
         "cordova-plugin-inappbrowser": "^1.7.1",
+        "cordova-plugin-splashscreen": "^4.0.3",
+        "cordova-plugin-statusbar": "^2.2.2",
+        "cordova-plugin-whitelist": "^1.3.1",
         "cordova-universal-links-plugin": "^1.2.1",
         "firebase": "^4.3.0",
         "ionic-angular": "3.6.0",
+        "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
         "rxjs": "5.4.0",
         "sw-toolbox": "3.6.0",
         "zone.js": "0.8.12"
     },
     "devDependencies": {
+        "@angular/cli": "^1.3.2",
         "@ionic/app-scripts": "2.1.3",
         "typescript": "2.3.4"
     },
@@ -46,7 +56,16 @@
             "cordova-plugin-buildinfo": {},
             "cordova-universal-links-plugin": {},
             "cordova-plugin-browsertab": {},
-            "cordova-plugin-inappbrowser": {}
-        }
+            "cordova-plugin-inappbrowser": {},
+            "cordova-plugin-console": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-whitelist": {},
+            "ionic-plugin-keyboard": {}
+        },
+        "platforms": [
+            "android"
+        ]
     }
 }
