--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
         "@angular/core": "4.1.3",
         "@angular/forms": "4.1.3",
         "@angular/http": "4.1.3",
-        "@angular/router": "^4.2.4",
         "@angular/platform-browser": "4.1.3",
         "@angular/platform-browser-dynamic": "4.1.3",
+        "@angular/router": "^4.2.4",
         "@ionic-native/core": "3.12.1",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
@@ -37,10 +37,11 @@
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
         "cordova-universal-links-plugin": "^1.2.1",
-        "firebase": "^4.3.0",
+        "firebase": "^4.3.1",
         "ionic-angular": "3.6.0",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
+        "promise-polyfill": "^6.0.2",
         "rxjs": "5.4.0",
         "sw-toolbox": "3.6.0",
         "zone.js": "0.8.12"
