--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
-  "name": "ionicApp",
-  "app_id": "",
+  "name": "FireChat",
+  "app_id": "107e6dd7",
   "type": "ionic-angular",
   "integrations": {
     "cordova": {}
