--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "cordova-plugin-whitelist": "^1.3.1",
         "cordova-universal-links-plugin": "^1.2.1",
         "firebase": "^4.3.1",
+        "firebase-functions": "^0.6.3",
         "google-cloud": "^0.56.0",
         "ionic-angular": "3.6.0",
         "ionic-plugin-keyboard": "^2.2.1",
